update: links style updated

--- a/blocked.html
+++ b/blocked.html
@@ -112,7 +112,7 @@
       <div class="footer-sep"></div>
       <span class="footer-text">MIT License</span>
       <div class="footer-sep"></div>
-      <span class="footer-text">Free & Open Source</span>
+      <span class="footer-text"><a href="https:github.com/Abdulaziz-hu/Blockit" target="_blank">Free & Open Source</a></span>
     </div>
   </div>
 
