feat: new settings menu

--- a/blocked.html
+++ b/blocked.html
@@ -16,23 +16,16 @@
   <!-- Theme toggle -->
   <button class="theme-btn" id="themeBtn" title="Toggle theme">
     <span class="icon-sun">
-      <svg width="11" height="11" viewBox="0 0 12 12" fill="none">
-        <circle cx="6" cy="6" r="2.3" stroke="currentColor" stroke-width="1.2"/>
-        <line x1="6" y1="0.5" x2="6" y2="1.7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="6" y1="10.3" x2="6" y2="11.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="0.5" y1="6" x2="1.7" y2="6" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="10.3" y1="6" x2="11.5" y2="6" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="1.93" y1="1.93" x2="2.78" y2="2.78" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="9.22" y1="9.22" x2="10.07" y2="10.07" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="10.07" y1="1.93" x2="9.22" y2="2.78" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        <line x1="2.78" y1="9.22" x2="1.93" y2="10.07" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-      </svg>
-    </span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/>
+          </svg>
+        </span>
+        
     <span class="icon-moon">
-      <svg width="11" height="11" viewBox="0 0 12 12" fill="none">
-        <path d="M9.5 7A5 5 0 0 1 5 1.5a5.5 5.5 0 1 0 4.5 5.5z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
+          </svg>
+        </span>
     <span id="themeLabel">Light</span>
   </button>
 
@@ -45,12 +38,7 @@
     <div class="block-icon-wrap">
       <div class="block-icon-ring"></div>
       <div class="block-icon">
-        <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
-          <circle cx="17" cy="17" r="13" stroke="#e8ff00" stroke-width="1.2" stroke-dasharray="3 4" opacity="0.5"/>
-          <circle cx="17" cy="17" r="9"  stroke="#e8ff00" stroke-width="1"   opacity="0.2"/>
-          <line x1="7" y1="7" x2="27" y2="27" stroke="#ff4040" stroke-width="2" stroke-linecap="round"/>
-          <circle cx="17" cy="17" r="5" stroke="#ff4040" stroke-width="1.2" opacity="0.5"/>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-icon lucide-shield"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></svg>
       </div>
     </div>
 
