--- a/popup.html
+++ b/popup.html
@@ -22,34 +22,27 @@
   <!-- HEADER -->
   <div class="header">
     <div class="logo">
-      <div class="logo-icon">
-        <svg viewBox="0 0 13 13" fill="none">
-          <rect x="1" y="1" width="11" height="11" rx="1.5" stroke="#0a0a0a" stroke-width="1.5"/>
-          <line x1="3" y1="5" x2="10" y2="5" stroke="#0a0a0a" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="3" y1="8" x2="7.5" y2="8" stroke="#0a0a0a" stroke-width="1.5" stroke-linecap="round"/>
-        </svg>
-      </div>
+      <!-- <div class="logo-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-text-icon lucide-file-text"><path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"/><path d="M14 2v5a1 1 0 0 0 1 1h5"/><path d="M10 9H8"/><path d="M16 13H8"/><path d="M16 17H8"/></svg>
+      </div> -->
       <span class="logo-name">Block<span>It</span></span>
     </div>
 
     <div class="header-right">
+      <button class="settings-btn" id="settingsBtn" title="Settings">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-settings-icon lucide-settings"><path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"/><circle cx="12" cy="12" r="3"/></svg>
+      </button>
+      
       <button class="theme-btn" id="themeBtn" title="Toggle light / dark theme">
         <span class="icon-sun">
-          <svg width="12" height="12" viewBox="0 0 12 12" fill="none">
-            <circle cx="6" cy="6" r="2.3" stroke="currentColor" stroke-width="1.2"/>
-            <line x1="6" y1="0.5" x2="6" y2="1.7" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="6" y1="10.3" x2="6" y2="11.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="0.5" y1="6" x2="1.7" y2="6" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="10.3" y1="6" x2="11.5" y2="6" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="1.93" y1="1.93" x2="2.78" y2="2.78" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="9.22" y1="9.22" x2="10.07" y2="10.07" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="10.07" y1="1.93" x2="9.22" y2="2.78" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-            <line x1="2.78" y1="9.22" x2="1.93" y2="10.07" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/>
           </svg>
         </span>
+
         <span class="icon-moon">
-          <svg width="12" height="12" viewBox="0 0 12 12" fill="none">
-            <path d="M9.5 7A5 5 0 0 1 5 1.5a5.5 5.5 0 1 0 4.5 5.5z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
           </svg>
         </span>
       </button>
@@ -74,10 +67,7 @@
     <button id="blockCurrentBtn">
       <div class="btn-left">
         <span class="btn-icon">
-          <svg width="13" height="13" viewBox="0 0 13 13" fill="none">
-            <circle cx="6.5" cy="6.5" r="5.5" stroke="currentColor" stroke-width="1.3"/>
-            <line x1="2" y1="2" x2="11" y2="11" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-icon lucide-shield"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></svg>
         </span>
         Block this site
       </div>
