feat: added new privacy page

--- a/settings.html
+++ b/settings.html
@@ -96,11 +96,10 @@
         </div>
         
         <div class="about-links">
-          <a href="https://github.com/Abdulaziz-hu/blockit" target="_blank">GitHub</a>
-          <span>•</span>
-          <a href="https://github.com/Abdulaziz-hu/blockit/blob/main/LICENSE" target="_blank">MIT License</a>
-          <span>•</span>
-          <a href="https://lucide.dev/" target="_blank">Icons (Lucide)</a>
+          <a href="https://github.com/Abdulaziz-hu/blockit" target="_blank">GitHub</a> | 
+          <a href="https://github.com/Abdulaziz-hu/blockit/blob/main/LICENSE" target="_blank">MIT License</a> | 
+          <a href="https://lucide.dev/" target="_blank">Lucide.dev</a> | 
+          <a href="./privacy.html" target="_blank">Privacy Policy</a>
         </div>
       </div>
 
